--- a/modules/boonex/profile_customize/templates/base/content_box.html
+++ b/modules/boonex/profile_customize/templates/base/content_box.html
@@ -1,7 +1,5 @@
+<bx_if:select_target>__top_controls__</bx_if:select_target>
 <div class="bx-def-bc-margin">
-    <bx_if:select_target>
-        __top_controls__
-    </bx_if:select_target>
     __content__
     <div class="buttons_bar bx-def-margin-top">
         <bx_repeat:buttons>
