--- a/modules/boonex/site_customize/templates/base/content_box_top_controls.html
+++ b/modules/boonex/site_customize/templates/base/content_box_top_controls.html
@@ -1,8 +1,10 @@
-<div class="ordered_block bx-def-margin-bottom">
-	<div class="bx-def-margin-thd-bottom bx-def-font-inputs-captions">__name_box__</div>
-	<div class="input_wrapper input_wrapper_select clearfix">
-		<select class="form_input_select bx-def-font-inputs" name="__name_targets_box__" onchange="oBxSctrMain.reloadCustomizeBlock(this.value);">
-			<bx_repeat:targets><option value="__value__" __select__>__name__</option></bx_repeat:targets>
-		</select>
+<div class="ordered_block">
+	<div class="ordered_block_select">
+		<span>__name_box__</span>
+		<div class="input_wrapper input_wrapper_select bx-def-margin-sec-left clearfix">
+			<select class="form_input_select bx-def-font-inputs" name="__name_targets_box__" onchange="oBxSctrMain.reloadCustomizeBlock(this.value);">
+				<bx_repeat:targets><option value="__value__" __select__>__name__</option></bx_repeat:targets>
+			</select>
+		</div>
 	</div>
 </div>
