--- a/templates/base/cmts_top_controls.html
+++ b/templates/base/cmts_top_controls.html
@@ -1,6 +1,6 @@
-<div class="cmt-order">
+<div class="ordered_block">
     __sorting__
-    <input type="checkbox" id="cmt-expand" name="cmt-expand" onclick="javascript:__js_object__.expandAll(this)"/><label for="cmt-expand">__expand_all__</label>
+    <input class="bx-def-margin-sec-left" type="checkbox" id="cmt-expand" name="cmt-expand" onclick="javascript:__js_object__.expandAll(this)"/><label for="cmt-expand">__expand_all__</label>
 </div>
-<div class="cmt-pages">__pages__</div>
+<div class="per_page_block">__pages__</div>
 <div class="clear_both">&nbsp;</div>
