--- a/templates/base/tags_top_controls.html
+++ b/templates/base/tags_top_controls.html
@@ -1,9 +1,13 @@
 <div class="ordered_block">
-    <bx_text:_tags_caption_module />
-    <select onchange="loadDynamicBlock(__block_id__, this.value)">
-        <bx_repeat:options>
-            <option value="__key__" ' . <bx_if:show_selected>selected="selected"</bx_if:show_selected>>__value__</option>
-        </bx_repeat:options>
-    </select>
+	<div class="ordered_block_select">
+		<span><bx_text:_tags_caption_module /></span>
+		<div class="input_wrapper input_wrapper_select bx-def-margin-sec-left clearfix">
+		    <select class="form_input_select bx-def-font-inputs" onchange="loadDynamicBlock(__block_id__, this.value)">
+		        <bx_repeat:options>
+		            <option value="__key__" ' . <bx_if:show_selected>selected="selected"</bx_if:show_selected>>__value__</option>
+		        </bx_repeat:options>
+		    </select>
+		</div>
+	</div>
 </div>
 <div class="clear_both"></div>
