--- a/templates/base/thumbnail_single_plain.html
+++ b/templates/base/thumbnail_single_plain.html
@@ -1,7 +1,7 @@
 <div class="thumbnail_block clearfix __classes_add__" style="float:__sys_thb_float__;">
 	<div class="thumbnail_image">
         <bx_if:show_thumbnail_image1>
-            <img src="__usr_thumb_url0__" src-2x="__usr_thumb_url0_2x__" class="thumbnail_image_file bx-def-thumbnail bx-def-shadow bx-img-retina" />
+            <img src="__usr_thumb_url0__" src-2x="__usr_thumb_url0_2x__" alt="__usr_thumb_alt0__" class="thumbnail_image_file bx-def-thumbnail bx-def-shadow bx-img-retina" />
         </bx_if:show_thumbnail_image1>
         <bx_if:show_thumbnail_letter1>
             <p class="thumbnail_image_letter bx-def-border bx-def-thumbnail bx-def-shadow">__letter__</p>
