--- a/modules/boonex/wall/templates/base/outline_voting_do_vote.html
+++ b/modules/boonex/wall/templates/base/outline_voting_do_vote.html
@@ -1,4 +1,4 @@
 <a class="wall-voting-do-vote bx-btn bx-btn-small wall-oii-action" href="javascript:void(0)" onclick="javascript:__js_object__.vote(__max__)" title="<bx_text_attribute:_wall_do_vote />">
 	<i class="sys-icon thumbs-up"></i>
 </a>
-<bx_if:show_count><b class="wall-voting-counter-holder wall-voting-count">__count__</b></bx_if:show_count>
+<bx_if:show_count><b class="wall-voting-counter-holder wall-voting-count votes_count">__count__</b></bx_if:show_count>
