--- a/modules/boonex/wall/templates/base/common_media.html
+++ b/modules/boonex/wall/templates/base/common_media.html
@@ -1,6 +1,9 @@
 <div class="wall-post-media">
     <div class="wall-pm-thumbnail bx-def-shadow bx-def-round-corners">
         <a href="__link__"><img class="wall-pm-thumbnail" src="__image_url__" title="__title__" alt="__title__" /></a>
+        <bx_if:show_duration>
+        	<div class="wall-pm-duration bx-def-round-corners">__duration_f__</div>
+        </bx_if:show_duration>
     </div>
     <div class="wall-pm-title bx-def-font-h2">
         <a href="__link__">__title__</a>
