--- a/templates/base/css/forms_adv.css
+++ b/templates/base/css/forms_adv.css
@@ -102,7 +102,8 @@
 
 .input_wrapper_input_set {
     float: none;
-    padding: 5px;
+    margin: -5px;
+    padding: 0px;
 }
 
 .input_wrapper_input_set .bx-btn {
