#416 World Map: NoApiKey error fix

--- a/modules/boonex/world_map/templates/base/map.html
+++ b/modules/boonex/world_map/templates/base/map.html
@@ -72,7 +72,7 @@
     }
 
 
-    google.load("maps", "3", {other_params: "sensor=false&language=__lang__"});
+    google.load("maps", "3", {other_params: "language=__lang__&key=__key__"});
     google.setOnLoadCallback(BxWmapOnloadCallback__suffix__);
 
 </script>
