#424 Google Search: New API

--- a/modules/boonex/google_search/templates/base/search_form.html
+++ b/modules/boonex/google_search/templates/base/search_form.html
@@ -1,6 +1,3 @@
-<div class="bx_gsearch_container" id="bx_gsearch_form__suffix__">
-    <div class="sys-loading"></div>
-</div>
-<script type="text/javascript">
-	$('#bx_gsearch__suffix__ .sys-loading').bx_loading();
-</script>
+
+<div class="gcse-searchbox-only"></div>
+
