#454 Admin panel: white icons on white background

--- a/administration/templates/base/css/index.css
+++ b/administration/templates/base/css/index.css
@@ -10,8 +10,8 @@ div.adm-category-item img {
 	position: absolute;	
 }
 div.adm-category-item .sys-icon {
-    font-size:20px;
-	color: #ffffff;
+    font-size: 20px;
+	color: #333;
 }
 div.adm-ci-link {
 	margin-left: 35px;
