--- a/modules/boonex/wall/templates/base/timeline_post_files_grouped.html
+++ b/modules/boonex/wall/templates/base/timeline_post_files_grouped.html
@@ -7,9 +7,11 @@
 <div class="wall-content __mod_prefix__-wall-content-grouped">
 	<div class="wall-content-cnt __mod_prefix__-wall-content-grouped-cnt cleatfix">
 		<bx_repeat:items>
-			<div class="wall-content-wrapper __mod_prefix__-wall-shp-wrapper bx-def-margin-sec-left bx-def-shadow bx-def-round-corners">
-				<a href="__cnt_item_page__"><img class="__mod_prefix__-wall-shp" src="__cnt_item_icon__" title="__cnt_item_title__" /></a>
-			</div>
+			<div class="wall-content-gap __mod_prefix__-wall-shp-gap">
+				<div class="wall-content-wrapper __mod_prefix__-wall-shp-wrapper bx-def-margin-sec-left bx-def-shadow bx-def-round-corners">
+					<a href="__cnt_item_page__"><img class="__mod_prefix__-wall-shp" src="__cnt_item_icon__" title="__cnt_item_title__" /></a>
+				</div>
+	        </div>
 		</bx_repeat:items>
 		<div class="clear_both"></div>
 	</div>
