--- a/templates/base/css/twig.css
+++ b/templates/base/css/twig.css
@@ -11,10 +11,15 @@
     float: left;
     display: table-cell;
 
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+
     top: 0px;
     left: 0px;
-    width: 240px;
-    margin: 5px 10px 5px 5px;
+    width: 100%;
+    max-width: 240px;
+    padding: 5px;
 
     text-align: center;
     vertical-align: top;
