#603 World Map: maps isn't loading in user side

--- a/templates/base/extra_top_menu.html
+++ b/templates/base/extra_top_menu.html
@@ -161,7 +161,7 @@
             var sQueryParam  = '';
 
             //procces all registered bubbles;
-            for (Element in  this.oBubbles)
+            for (var Element in  this.oBubbles)
             {
                 sQueryParam = sQueryParam + Element + ':' + this.oBubbles[Element].count + ',';
             }
