--- a/templates/base/css/forms_adv.css
+++ b/templates/base/css/forms_adv.css
@@ -379,99 +379,7 @@
     box-sizing: border-box;
 }
 
-/****************************************
-*		Custom reCaptcha Theme
-****************************************/
-.form_input_captcha {
-	background-color: #b71800;
-	padding: 0.5em;
-	border-radius: 1em;
-	position: relative;
-	overflow: auto;
-	max-width: 480px;
-	font: 0.75em/1em "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #ffffff;
-}
-.form_input_captcha a {
-	color: #ffffff;
-	text-decoration: none;
-}
-.form_input_captcha img,
-.form_input_captcha #recaptcha_image {
-	width: 100% !important;
-	height: auto !important;
-	-webkit-border-radius: 0.5em;
-	-moz-border-radius: 0.5em;
-	border-radius: 0.5em;
-	-moz-background-clip: padding;
-	-webkit-background-clip: padding-box;
-	background-clip: padding-box;
-}
-.form_input_captcha .solution {
-	position: relative;
-	float: left;
-	width: 75%;
-}
-.form_input_captcha .solution-cnt {
-	margin-top: 0.5em;
-	padding: 1.2em 1em;
-	-webkit-border-radius: 0.5em;
-	-moz-border-radius: 0.5em;
-	border-radius: 0.5em;
-	-moz-background-clip: padding;
-	-webkit-background-clip: padding-box;
-	background-clip: padding-box;
-	background-color: #fbe098;
-	color: #000000;
-	display: block;
-}
-.form_input_captcha .solution-cnt input {
-	display: block;
-	width: calc(90% - 2px);
-	margin: 0.35em auto;
-	-webkit-appereance: none;
-	border: 1px solid #f7c236;
-	font: inherit;
-	font-size: 150%;
-	outline: none;
-}
-.form_input_captcha .solution-cnt input:focus {
-	border-color: #b71800;
-}
-.form_input_captcha .options {
-	position: relative;
-	float: right;
-	width: 25%;
-	
-}
-.form_input_captcha .options-cnt {
-	margin-top: 0.5em;
-	padding-left: 0.5em;
-	-webkit-border-radius: 0.5em;
-	-moz-border-radius: 0.5em;
-	border-radius: 0.5em;
-	-moz-background-clip: padding;
-	-webkit-background-clip: padding-box;
-	background-clip: padding-box;
-}
-.form_input_captcha .options-cnt a {
-	background-color: #c5523d;
-	display: block;
-	padding: 0.5em 1.0em;
-	border-top: 1px solid #000000;
-	border-left: 1px solid #000000;
-	border-right: 1px solid #000000;
-}
-.form_input_captcha .options-cnt a:first-child {
-	border-radius: 0.5em 0.5em 0 0;
-}
-.form_input_captcha .options-cnt a:last-child {
-	border-radius: 0 0 0.5em 0.5em;
-	border-bottom: 1px solid #000000;
-}
-
-/* emoji picker */
-
+/* * * * * emoji picker * * * * */
 .bx-form-input-emoji {
     position:absolute;
     top:0px;
