--- a/modules/boonex/html5av/templates/base/embed.html
+++ b/modules/boonex/html5av/templates/base/embed.html
@@ -4,8 +4,8 @@
 <style>
 html {overflow:hidden; }
 body {background-color:#000; color:#fff; height:100%; width:100%; overflow:hidden; position:absolute; margin:0; padding:0; } 
-video {width:100%; height:100%; }
-.message { text-align:center; margin:10px; font-size:19px; }
+video, audio {width:100%; height:100%; }
+.message { text-align:center; margin:10px; font-size:19px; line-height:34px; }
 </style>
 </head>
 <body>
